# metal-history

./: LICENSE  README.md  metal-history.cabal  stack.yaml
src/: Lib.hs
src/HM/Data/: Album.hs  Band.hs  Search.hs
src/MH/: Net.hs
src/MH/Data/: Album.hs  Band.hs  Search.hs
