name:                metal-history
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ramaciotti/metal-history#readme
license:             BSD3
license-file:        LICENSE
author:              André Ramaciotti da Silva
maintainer:          andre@ramaciotti.com
copyright:           2017 André Ramaciotti da Silva
category:            Console
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.2 && < 1.3
                     , req >= 0.2 && < 0.3
  default-language:    Haskell2010

executable metal-history-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , metal-history
  default-language:    Haskell2010

test-suite metal-history-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , metal-history
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ramaciotti/metal-history
